--- a/www.hookamonk.com/src/html/index.njk
+++ b/www.hookamonk.com/src/html/index.njk
@@ -532,7 +532,7 @@
             ✓ For personal use only
           </p>
           <button class="button button__contained button__contained--white">
-            <a href="mailto:sales@hookamonk.com?subject=I want Warp for home" class="button__label">Next</a>
+            <a href="/for-home" class="button__label">Next</a>
           </button>
         </div>
         <div class="hm-warp__type hm-warp__type--b2c mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop zoom">
@@ -543,7 +543,7 @@
             ✓ Additional services
           </p>
           <button class="button button__contained button__contained--white">
-            <a href="mailto:sales@hookamonk.com?subject=I want Warp for workspace" class="button__label">Next</a>
+            <a href="/for-workspace" class="button__label">Next</a>
           </button>
         </div>
         <div class="hm-warp__type hm-warp__type--b2d mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop zoom">
