--- a/studio.topmonks.com/src/html/index.njk
+++ b/studio.topmonks.com/src/html/index.njk
@@ -574,10 +574,10 @@
           <h2>Contact us</h2>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <form class="tm-form tm-form__contact">
+          <form class="tm-form tm-form__contact" action="https://eg0fddsild.execute-api.eu-central-1.amazonaws.com/v1/startup-studio-contact-form" method="POST">
             <div class="tm-form-control tm-form-control--required">
-              <input class="tm-form-control__field" type="text" id="projectname" name="projectname" required/>
-              <label class="tm-form-control__label" for="projectname">Project name</label>
+              <input class="tm-form-control__field" type="text" id="projectName" name="projectName" required/>
+              <label class="tm-form-control__label" for="projectName">Project name</label>
             </div>
             <div class="tm-form-control tm-form-control--required">
               <input class="tm-form-control__field" type="email" id="email" name="email" required/>
@@ -588,8 +588,8 @@
               <label class="tm-form-control__label" for="tel">Phone number</label>
             </div>
             <div class="tm-form-control">
-              <textarea class="tm-form-control__field" id="projectdesc" name="projectdesc" required></textarea>
-              <label class="tm-form-control__label" for="projectdesc">Short project description</label>
+              <textarea class="tm-form-control__field" id="projectDescription" name="projectDescription" required></textarea>
+              <label class="tm-form-control__label" for="projectDescription">Short project description</label>
             </div>
             <button type="submit" class="button button-fullwidth">send</button>
           </form>
@@ -687,21 +687,16 @@
   contactFormFields.forEach((i) => toggleFieldState(i));
   const modal = document.querySelector(".modal");
 
-  contactForm.addEventListener("submit", async function(e) {
-    e.stopImmediatePropagation();
+  contactForm.addEventListener("submit", async e => {
     e.preventDefault();
-    const data = contactFormFields
-      .map(input => [input.name, input.value])
-      .reduce((obj, [k, v]) => Object.assign(obj, { [k]: v }), {});
+    const formData = new FormData(e.target);
+    let data = {};
+    formData.forEach((value, key) => data[key] = value);
+    await fetch(e.target.action, {
+      method: e.target.method.toUpperCase(),
+      body: JSON.stringify(data),
+    });
 
-    await fetch(
-      "https://uwjqzwx0d3.execute-api.eu-central-1.amazonaws.com/production/startupstudio-contact-form",
-      {
-        method: "POST",
-        body: JSON.stringify(data),
-        mode: 'no-cors',
-      }
-    );
     modal.classList.toggle("is-visible");
     contactForm.reset();
     contactFormFields.forEach((i) => toggleFieldState(i));
