Start up Studio - New logos in content.
Deleted and added logos.

--- a/studio.topmonks.com/src/html/index.njk
+++ b/studio.topmonks.com/src/html/index.njk
@@ -331,23 +331,36 @@
           <h2 class="h2_black">Portfolio</h2>
         </div>
         <div class="portfolio-logo mdc-layout-grid__cell">
-          <a title="website of Pricefx" href="https://www.pricefx.eu/site/">
-            <img src="/images/logo/pricefx.svg" alt="Logo Pricefx" height="68" width="152"/>
+          <a title="Website of Pricefx" href="https://www.pricefx.eu/site/">
+            <img src="/images/logo/pricefx.svg" alt="Logo Pricefx" height="100" width="148"/>
           </a>
           <p>Pricefx is the pricing suite designed especially for the needs
             of a holistic pricing process.</p>
         </div>
         <div class="portfolio-logo mdc-layout-grid__cell">
-          <a title="website of Techloop.io" href="https://techloop.io/">
-            <img src="/images/logo/techloop.svg" alt="Logo Techloop.io" height="68" width="226"/>
+          <a title="Website of Techloop.io" href="https://techloop.io/">
+            <img src="/images/logo/techloop.svg" alt="Logo Techloop.io" height="100" width="148"/>
           </a>
           <p>Platform for matching IT professionals with hiring companies.</p>
         </div>
         <div class="portfolio-logo mdc-layout-grid__cell">
-          <a title="website of Go Real Europe" href="https://www.gorealeurope.com/">
-            <img src="/images/logo/GoRealEurope_logo.svg" alt="Logo Go Real Europe" height="68" width="120"/>
+          <a title="Website of Lafluence" href="https://lafluence.com/">
+            <img src="/images/logo/lafluence-portfolio.svg" alt="Logo Lafluence" height="100" width="148"/>
+          </a>
+          <p>Lafluence is the TOP platform for Czech republic and Slovakia for connecting
+            brands and marketing agencies with influencers.</p>
+        </div>
+        <div class="portfolio-logo mdc-layout-grid__cell">
+          <a title="Website of Go Real Europe" href="https://www.gorealeurope.com/">
+            <img src="/images/logo/GoRealEurope_logo.svg" alt="Logo Go Real Europe" height="100" width="128"/>
           </a>
           <p>Europe Trip Planning app for 21st century.</p>
+        </div>
+        <div class="portfolio-logo mdc-layout-grid__cell">
+          <a title="Website of Hookamonk" href="https://www.hookamonk.com/">
+            <img src="/images/logo/hookamonk-portfolio.svg" alt="Logo Hookamonk" height="100" width="148"/>
+          </a>
+          <p>First fully electronic hookah set for tobacco.</p>
         </div>
       </div>
     </div>
@@ -356,7 +369,7 @@
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-          <img src="/images/logo/bouncepilot.svg" alt="Bounce Pilot Logo" width="137" height="137"/>
+          <img src="/images/logo/postcube.svg" alt="Postcube Logo" width="109" height="137"/>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
           <img src="/images/logo/lafluence.svg" alt="Lafluence Logo" width="137" height="137"/>
@@ -365,19 +378,10 @@
           <img src="/images/logo/swarmpit.svg" alt="Swarmpit Logo" width="137" height="137"/>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-          <img src="/images/logo/purposefly.svg" alt="Purposefly Logo" width="137" height="137"/>
+          <img src="/images/logo/om.svg" alt="OM Platform Logo" width="55" height="137"/>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-          <img src="/images/logo/ingrid.svg" alt="Ingrid Logo" width="137" height="137"/>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-          <img src="/images/logo/quickshirt.svg" alt="Quickshirt Logo" width="137" height="137"/>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-          <img src="/images/logo/coocoon.svg" alt="CooCoon Logo" width="137" height="137"/>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-          <img src="/images/logo/2pocket.svg" alt="2pocket Logo" width="137" height="137"/>
+          <img src="/images/logo/ticketmonk.svg" alt="TicketMonks Logo" width="137" height="137"/>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
           <img src="/images/logo/hookamonk.svg" alt="Hookamonk Logo" width="137" height="137"/>
@@ -392,7 +396,7 @@
           <h3>Numbers of startups</h3>
           <div class="mdc-layout-grid__inner">
             <div class="data_triangle mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-              <p>16</p>
+              <p>19</p>
             </div>
           </div>
         </div>
@@ -400,7 +404,7 @@
           <h3>Portfolio valuation</h3>
           <div class="mdc-layout-grid__inner">
             <div class="data_triangle mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-              <p>€11 M</p>
+              <p>€10.4 M</p>
             </div>
           </div>
         </div>
