StartUp Studio - Deleted logos + Change in text

--- a/studio.topmonks.com/src/html/index.njk
+++ b/studio.topmonks.com/src/html/index.njk
@@ -368,23 +368,17 @@
   <section id="clients" class="clients">
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
           <img src="/images/logo/postcube.svg" alt="Postcube Logo" width="109" height="137"/>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-          <img src="/images/logo/lafluence.svg" alt="Lafluence Logo" width="137" height="137"/>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
           <img src="/images/logo/swarmpit.svg" alt="Swarmpit Logo" width="137" height="137"/>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
           <img src="/images/logo/om.svg" alt="OM Platform Logo" width="55" height="137"/>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
           <img src="/images/logo/ticketmonk.svg" alt="TicketMonks Logo" width="137" height="137"/>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-          <img src="/images/logo/hookamonk.svg" alt="Hookamonk Logo" width="137" height="137"/>
         </div>
       </div>
     </div>
@@ -401,10 +395,10 @@
           </div>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-          <h3>Portfolio valuation</h3>
+          <h3>Portfolio return</h3>
           <div class="mdc-layout-grid__inner">
             <div class="data_triangle mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-              <p>€10.4 M</p>
+              <p>10.4x</p>
             </div>
           </div>
         </div>
