StartUp Studio - English text - grammar correction

--- a/studio.topmonks.com/src/html/index.njk
+++ b/studio.topmonks.com/src/html/index.njk
@@ -257,7 +257,7 @@
             <div
               class="pitch-us__text mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
               <h3>02. PROTOTYPE</h3>
-              <p>Have a MVP or product crafted by some skilled tech-monks.</p>
+              <p>Have a MVP or product crafted by our skilled tech-monks.</p>
             </div>
           </div>
         </div>
@@ -277,7 +277,7 @@
             <div
               class="pitch-us__text mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
               <h3>03. PARTNERSHIP</h3>
-              <p>We summon your development team or help finding your new&nbsp;CTO.</p>
+              <p>We summon your development team or help find your new&nbsp;CTO.</p>
             </div>
           </div>
         </div>
@@ -302,9 +302,8 @@
             <div
               class="pitch-us__text mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
               <h3>04. GROWTH</h3>
-              <p>We support you in growing your businesses, enhancing your
-                skills, providing our network and help raising follow-up
-                rounds.</p>
+              <p>We support you in growing your businesses, enhancing your skills, providing
+                our network, and helping to raise follow-up rounds.</p>
             </div>
           </div>
         </div>
@@ -341,20 +340,19 @@
           <a title="Website of Techloop.io" href="https://techloop.io/">
             <img src="/images/logo/techloop.svg" alt="Logo Techloop.io" height="100" width="148"/>
           </a>
-          <p>Platform for matching IT professionals with hiring companies.</p>
+          <p>A platform for matching tech professionals with hiring companies.</p>
         </div>
         <div class="portfolio-logo mdc-layout-grid__cell">
           <a title="Website of Lafluence" href="https://lafluence.com/">
             <img src="/images/logo/lafluence-portfolio.svg" alt="Logo Lafluence" height="100" width="148"/>
           </a>
-          <p>Lafluence is the TOP platform for Czech republic and Slovakia for connecting
-            brands and marketing agencies with influencers.</p>
+          <p>Lafluence is the TOP platform for the Czech Republic and Slovakia for connecting brands and marketing agencies with influencers.</p>
         </div>
         <div class="portfolio-logo mdc-layout-grid__cell">
           <a title="Website of Go Real Europe" href="https://www.gorealeurope.com/">
             <img src="/images/logo/GoRealEurope_logo.svg" alt="Logo Go Real Europe" height="100" width="128"/>
           </a>
-          <p>Europe Trip Planning app for 21st century.</p>
+          <p>A&nbsp;Europe Trip Planning app for the 21st century.</p>
         </div>
         <div class="portfolio-logo mdc-layout-grid__cell">
           <a title="Website of Hookamonk" href="https://www.hookamonk.com/">
@@ -420,15 +418,13 @@
           <div class="network__content-box mdc-layout-grid__inner">
             <div
               class="white-box mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-10-desktop">
-              <p>We have seen hundreds of projects; we understand investors,
-                market sentiment and various interest of the major
-                stakeholders. Thus our know-how can be helpful when making
-                your next pitch. As our partners, you will get all our
-                support in preparing the pitch deck and networking with the
-                investors. Now it's&nbsp;our mutual interest to help you
-                grow and to raise your funds in the Seed Round or Round A.
-                The same approach to your B2B partners, in case we are
-                familiar with your segment.</p>
+              <p>We have seen hundreds of projects; we understand investors, market sentiment,
+                and various interests of the major stakeholders. Thus, our know-how can be
+                helpful when making your next pitch. As our partners, you will get all our
+                support in preparing the pitch deck and networking with the investors. It is our
+                mutual interest to help you grow and raise your funds in the Seed Round or Round
+                A. The same approach to your B2B partners, in case we are familiar with your
+                segment.</p>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2"></div>
           </div>
@@ -498,18 +494,18 @@
             <a href="https://blog.topmonks.com/how-to-raise-funds-for-your-startup-idea-5cfa33d0277e">Psychology of
               raising angel funds for your startup</a>
           </h3>
-          <p>Raising angel funds for your startup idea could be a difficult
-            task. Couple of failures, bad lucks or setbacks while meeting
-            with investors&hellip;</p>
+          <p>The idea of raising angel funds for your startup can be a difficult task.
+            A&nbsp;couple of failures, bad lucks, or setbacks while meeting with
+            investors…</p>
         </div>
         <div class="white-box blog_middle-box mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
           <h3>
             <a href="https://blog.topmonks.com/why-we-invested-in-quickshirt-9b95e510f3a4">Why we invested in
               Quickshirt</a>
           </h3>
-          <p>This investment does not fit under the high scalable startup
-            definition with multiple ROI. Yet, we consider it as a decent
-            entrepreneurship which will help us stabilise our portfolio.</p>
+          <p>This investment does not fit under the high scalable startup definition with
+            multiple ROI. Yet, we consider it as decent entrepreneurship that will help us
+            stabilize our portfolio.</p>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
           <h3>
@@ -532,11 +528,11 @@
         </div>
         <div class="mdc-layout-grid__cell"></div>
         <div class="white-box mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-          <h3>Success is a delivery not the time spent.</h3>
-          <p>We don't need you messing around from 9&nbsp;to 5&nbsp;in the
-            office. We want to deliver the perfection! As our team is mostly
-            distributed, we've worked diligently to improve the ways we work
-            together, and with our clients. Don't count hours, deliver!</p>
+          <h3>Success is a delivery, not a time spent.</h3>
+          <p>We don't need you messing around from 9&nbsp;to 5&nbsp;in the office. We want to
+            deliver perfection! As our team is mostly distributed, we've worked diligently
+            to improve the ways we work together, and with our clients. Don't count hours,
+            deliver!</p>
         </div>
         <div
           class="about_us-box about_us-blue-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-desktop">
