StartUp Studio - English text enhancement

--- a/studio.topmonks.com/src/html/index.njk
+++ b/studio.topmonks.com/src/html/index.njk
@@ -302,8 +302,8 @@
             <div
               class="pitch-us__text mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
               <h3>04. GROWTH</h3>
-              <p>We support you in growing your businesses, enhancing your skills, providing
-                our network, and helping to raise follow-up rounds.</p>
+              <p>We provide our network to support you in growing your businesses, enhancing
+                your skills, and raising follow-up rounds.</p>
             </div>
           </div>
         </div>
