--- a/www.hookamonk.com/src/stylesheets/v2/header.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/header.scss
@@ -84,8 +84,7 @@
     left: 0;
     top: 0;
     right: 0;
-    bottom: 0;
-    padding-top: 64px;
+    padding: 64px 8px 114px;
     transform: translate(0, -100vh);
     position: fixed;
     z-index: 3;
